--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,10 +26,17 @@
     <string name="result_awesome">Empieza ya!</string>
     <string name="thank_you">Gracias por elegirnos</string>
     <string name="after_updating">Empieza a recorrer Fuente de oro y a descubrir sus maravillas</string>
-    <string name="title_activity_ruta_map">Map</string>
+
+    <string name="nav_header_title">Administrador</string>
+    <string name="nav_header_subtitle">ciclismofuenteoro@gmail.com</string>
+    <string name="action_settings">Cerrar Sesión</string>
+
+    <string name="menu_home">Inicio</string>
+    <string name="menu_gallery">Rutas</string>
+    <string name="menu_slideshow">Sitios</string>
+    <string name="menu_usuarios">Usuarios</string>
+    <string name="menu_perfil">Perfil</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_recorrido_sitio">Map</string>
-    <string name="title_activity_reccorido_ruta">Map</string>
 
 </resources>
